--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -14,7 +14,6 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:backgroundTint="#8BC34A"
         android:elevation="50dp"
         app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -52,7 +51,7 @@
                     android:paddingStart="10dp"
                     android:paddingEnd="10dp"
                     android:text="Tipo"
-                    android:textColor="#000000"
+                    android:textColor="#FFF"
                     android:textSize="20sp" />
             </androidx.cardview.widget.CardView>
 
@@ -80,7 +79,7 @@
                     android:paddingEnd="10dp"
                     android:paddingBottom="5dp"
                     android:text="Nombre"
-                    android:textColor="#000000"
+                    android:textColor="#FFF"
                     android:textSize="20sp" />
             </androidx.cardview.widget.CardView>
 
@@ -94,6 +93,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                android:scaleType="centerCrop"
                 app:layout_constraintVertical_bias="0.571"
                  />
 
